Fixed site overflow-x

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ body{
 
 .site-content{
   margin: 0;
-  width: 100vw;
+  // width: 100vw;
 }
 
 .darken{
