--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -66,3 +66,7 @@ i {
   background-color: #382110;
   cursor: pointer;
 }
+
+.display-option > button{
+  cursor: pointer;
+}
